<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>ethercat_sdk_master</name>
  <version>0.0.1</version>
  <description>Generic EtherCAT Master for CoE Drives</description>
  
  <license>BSDv3</license>
  <author email="jungerj@student.ethz.ch">Jonas Junger</author>
  <author email="nachtigall@mavt.ethz.ch">Lennart Nachtigall</author>
  <maintainer email="jungerj@student.ethz.ch">Jonas Junger</maintainer>
  <maintainer email="nachtigall@mavt.ethz.ch">Lennart Nachtigall</maintainer>
  <url type="website">https://github.com/leggedrobotics/ethercat_sdk_master</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>soem_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
